<resources>
    <string name="app_name">OMaMul</string>
    <string name="default_error">에러 발생</string>
    <string name="app_error_100">컵 이름을 설정해주세요.</string>
    <string name="init_language_title">앱 내 사용 언어를 설정해주세요.</string>
    <string name="lang_ko">한국어</string>
    <string name="lang_en">English</string>
    <string name="lang_jp">日本語</string>
    <string name="lang_cn">简体中文</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="init_time_title">기상/취침 시간을 설정해주세요.</string>
    <string name="init_time_subtitle">설정한 시간 대에 알람을 수신하게 됩니다.</string>
    <string name="wakeup_time">기상 시간</string>
    <string name="sleep_time">취침 시간</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="init_intake_title">목표 물의 양을 설정해주세요.</string>
    <string name="init_intake_subtitle">매일 채울 물의 양을 설정합니다.</string>
    <string name="intake_amount">일일 물 섭취량(ml)</string>
    <string name="unit_ml">(ml)</string>
    <string name="unit_ml_no_bracket">ml</string>
    <string name="unit_liter">(L)</string>
    <string name="unit_l_no_bracket">L</string>
    <string name="unit_hour">(h)</string>
    <string name="unit_day">(d)</string>
    <string name="log_day_title">일</string>
    <string name="log_week_title">주</string>
    <string name="log_month_title">월</string>
    <string name="total">총</string>
    <string name="goal">목표</string>
    <string name="record">기록</string>
    <string name="cup_list_title">컵 목록</string>
    <string name="cup_list_reorder">순서 변경</string>
    <string name="cup_list_add">+ 새 컵 추가하기</string>
    <string name="cup_list_edit">수정 완료</string>
    <string name="cup_alias">컵 이름</string>
    <string name="cup_alias_hint">컵 이름을 설정해주세요.</string>
    <string name="cup_amount">컵 용량</string>
    <string name="cup_image">컵 이미지</string>
    <string name="add">추가하기</string>
    <string name="modify">수정하기</string>
    <string name="empty_day_list">물 섭취 기록이 없습니다.</string>
    <string name="empty_cup_list">컵을 추가해 주세요.</string>
</resources>