<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_cup_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cup_list_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_reorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cup_list_reorder"
        app:layout_constraintTop_toTopOf="@id/tv_cup_list_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_cup_list_title"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cup_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintVertical_bias="0"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/btn_reorder"
        app:layout_constraintBottom_toTopOf="@id/btn_next" />
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cup_list_add"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>