<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wap="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_intake_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake_amount"
        android:textColor="@color/black"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <com.tkw.omamul.ui.custom.WaterAmountPicker
        android:id="@+id/np_amount"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:selectionDividerHeight="0dp"
        wap:minValue="100"
        wap:maxValue="3000"
        wap:interval="5"
        app:layout_constraintTop_toBottomOf="@id/tv_intake_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/np_amount"/>
    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:background="@color/light_gray"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toLeftOf="@id/btn_save"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/np_amount"/>
</androidx.constraintlayout.widget.ConstraintLayout>