<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.tkw.omamul.ui.view.water.cup.CupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tv_cup_alias_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cup_alias"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_cup_alias"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_rect"
            android:gravity="center"
            android:inputType="text"
            android:textSize="20sp"
            android:text="@={viewModel.cupNameLiveData}"
            android:hint="@string/cup_alias_hint"
            app:layout_constraintTop_toBottomOf="@id/tv_cup_alias_title" />

        <TextView
            android:id="@+id/tv_cup_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cup_amount"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_cup_alias"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cup_amount_title">
            <com.tkw.omamul.ui.custom.WaterAmountPicker
                android:id="@+id/np_amount"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:selectionDividerHeight="0dp"
                android:value="@{viewModel.cupAmountLiveData}"
                app:minValue="100"
                app:maxValue="5000"
                app:interval="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_cup_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cup_image"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/cl_amount"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_rect"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cup_image_title">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.buttonName}"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>