<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:wap="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/first_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:background="@drawable/circle_unselected"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/first_line"/>
        <ImageView
            android:id="@+id/first_line"
            android:layout_width="25dp"
            android:layout_height="10dp"
            android:background="@drawable/dash_line"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toTopOf="@id/first_icon"
            app:layout_constraintBottom_toBottomOf="@id/first_icon"
            app:layout_constraintLeft_toRightOf="@id/first_icon"
            app:layout_constraintRight_toLeftOf="@id/second_icon"/>
        <TextView
            android:id="@+id/second_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:background="@drawable/circle_unselected"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/first_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/second_line"/>
        <ImageView
            android:id="@+id/second_line"
            android:layout_width="25dp"
            android:layout_height="10dp"
            android:background="@drawable/dash_line"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toTopOf="@id/first_icon"
            app:layout_constraintBottom_toBottomOf="@id/first_icon"
            app:layout_constraintLeft_toRightOf="@id/second_icon"
            app:layout_constraintRight_toLeftOf="@id/third_icon"/>
        <TextView
            android:id="@+id/third_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:background="@drawable/circle_selected"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/second_line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_intake_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_intake_title"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/first_icon"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_intake_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_intake_subtitle"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_intake_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intake_amount"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_intake_subtitle"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_title">
            <com.tkw.omamul.ui.custom.WaterAmountPicker
                android:id="@+id/np_amount"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:selectionDividerHeight="0dp"
                wap:minValue="100"
                wap:maxValue="3000"
                wap:interval="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
